feat: update dependence,add register config